Closed Bug 511418 Opened 15 years ago Closed 15 years ago

static-analysis error in jsobj.cpp:4257: cannot access JS_REQUIRES_STACK variable JSContext::fp

Categories

(Core :: JavaScript Engine, defect)

Other Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
status1.9.2 --- beta1-fixed

People

(Reporter: jorendorff, Unassigned)

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

http://tinderbox.mozilla.org/showlog.cgi?log=TraceMonkey/1250689940.1250690126.27067.gz

js/src/jsobj.cpp: In function 'JSBool js_GetPropertyHelper(JSContext*, JSObject*, jsid, JSBool, jsval*)':
js/src/jsobj.cpp:4257: error: cannot access JS_REQUIRES_STACK variable JSContext::fp
blame=jorendorff, and it looks like a real bug. I'll get to it today.
Oops, didn't get to it yesterday. Looking now. Another error:

/home/jorendorff/dev/tracemonkey/js/src/jstracer.cpp: In function ‘unsigned int FindUndemotesInTypemaps(JSContext*, const TypeMap&, TreeInfo*, Queue<unsigned int>&)’:
/home/jorendorff/dev/tracemonkey/js/src/jstracer.cpp:4024: error: cannot call JS_REQUIRES_STACK function MarkSlotUndemotable(JSContext*, TreeInfo*, unsigned int)
Attached patch v1Splinter Review
Attachment #395632 - Flags: review?(gal)
Comment on attachment 395632 [details] [diff] [review]
v1

This constant reflective PC inspection stuff is filthy.
Attachment #395632 - Flags: review?(gal) → review+
It is truly a dirty, dirty thing.

http://hg.mozilla.org/tracemonkey/rev/371c845dfd5d
Whiteboard: fixed-in-tracemonkey
http://hg.mozilla.org/mozilla-central/rev/371c845dfd5d
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: